java/cloud-fund-demo-java/setup/deployments/cloud-fund-backend.yml
apiVersion: v1
kind: Pod
metadata:
  name: cloud-fund-backend
  labels:
    app: cloud-fund-backend
spec:
  containers:
  - name: mariadb
    image: mariadb:latest
    ports:
    - containerPort: 3306
      hostPort: 3306
      name: mariadb
      protocol: TCP
  - name: java
    image: registry.ng.bluemix.net/datashield-core/cloud-fund-backend
    ports:
    - containerPort: 8080
  restartPolicy: OnFailure
