java/cloud-fund-demo-java/setup/deployments/cloud-fund-frontend.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: cloud-fund-frontend
  labels:
    app: cloud-fund-frontend
spec:
  containers:
    - name: cloud-fund-frontend
      image: us.icr.io/datashield-core/cloud-fund-frontend
      ports:
        - name: http
          containerPort: 3000
          protocol: TCP
