java/cloud-fund-demo-java/setup/deployments/maria-backend.yml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  containers:
  - name: mariadb
    image: icr.io/ibm/datashield-mariadb:161
    ports:
    - containerPort: 3306
      hostPort: 3306
      name: mariadb
      protocol: TCP
    volumeMounts:
    - mountPath: /dev/isgx
      name: isgx
    - mountPath: /dev/gsgx
      name: gsgx
    - mountPath: /var/run/aesmd/aesm.socket
      name: aesm-socket
  volumes:
  - name: isgx
    hostPath:
      path: /dev/isgx
      type: CharDevice
  - name: gsgx
    hostPath:
      path: /dev/gsgx
      type: CharDevice
  - name: aesm-socket
    hostPath:
      path: /var/run/aesmd/aesm.socket
      type: Socket
