java/cloud-fund-demo-java/setup/deployments/cloud-fund-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-fund-backend-service
spec:
  selector:
    app: cloud-fund-backend
  ports:
   - protocol: TCP
     port: 8080
