java/cloud-fund-demo-java/setup/deployments/cloud-fund-network-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cloud-fund-network-policy
spec:
  podSelector:
    matchLabels:
      app: cloud-fund-backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cloud-fund-bff
